[gd_scene load_steps=4 format=2]

[ext_resource path="res://NoteOctave.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.otf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="NoteOctave" type="Node2D"]
script = ExtResource( 1 )

[node name="OctaveTitle" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="OctaveTitle"]
margin_left = 100.0
margin_right = 200.0
margin_bottom = 40.0
color = Color( 0.745098, 0.176471, 0.176471, 0.341176 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="OctaveLabel" type="Label" parent="OctaveTitle"]
margin_left = 100.0
margin_right = 200.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "Octave 0"
align = 1
valign = 1

[node name="MeasureTitle" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="MeasureTitle"]
margin_top = 40.0
margin_right = 100.0
margin_bottom = 80.0
color = Color( 0.745098, 0.403922, 0.176471, 0.341176 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MeasureLabel" type="Label" parent="MeasureTitle"]
margin_top = 40.0
margin_right = 100.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "Measure 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ValuePanel" type="Node2D" parent="."]
position = Vector2( 100, 40 )
